--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Inline CSS Navbar</title>
 </head>
-
 <body>
-    <h1>Jaden Franco</h1>
-    <h1>Suraj Rajbhar</h1>
-    <h1>Hrutik P</h1>
-    <h1>Samit Fernandes</h1>
-</body>
 
+<!-- Navbar -->
+<div style="background-color:#333; padding:10px; display:flex; gap:20px;">
+    <a href="#" style="color:white; text-decoration:none; font-family:Arial; font-size:16px;">Home</a>
+    <a href="#" style="color:white; text-decoration:none; font-family:Arial; font-size:16px;">About</a>
+    <a href="#" style="color:white; text-decoration:none; font-family:Arial; font-size:16px;">Services</a>
+    <a href="#" style="color:white; text-decoration:none; font-family:Arial; font-size:16px;">Contact</a>
+</div>
+
+</body>
 </html>
