--- a/index.html
+++ b/index.html
@@ -5,13 +5,9 @@
 </head>
 <body>
 
-<!-- Navbar -->
-<div style="background-color:#333; padding:10px; display:flex; gap:20px;">
-    <a href="#" style="color:white; text-decoration:none; font-family:Arial; font-size:16px;">Home</a>
-    <a href="#" style="color:white; text-decoration:none; font-family:Arial; font-size:16px;">About</a>
-    <a href="#" style="color:white; text-decoration:none; font-family:Arial; font-size:16px;">Services</a>
-    <a href="#" style="color:white; text-decoration:none; font-family:Arial; font-size:16px;">Contact</a>
-</div>
+    <H1>Jaden Franco</H1>
+    <H1>Suraj Rajbhar</H1>
+    <h1>Hrutik P</h1>
 
 </body>
 </html>
